objects/Account.object
<CustomObject>
    <fields>
        <fullName>Agreed_Annual_Target_PA__c</fullName>
        <label>Agreed Annual Target PA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement_Remarks__c</fullName>
        <label>Agreement Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <label>Agreement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Agreement Prepared</fullName>
                </value>
                <value>
                    <fullName>Agreement Sent</fullName>
                </value>
                <value>
                    <fullName>Agreement Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approx_Annual_Travel_Spend_Last_Year__c</fullName>
        <inlineHelpText>Per Annunn</inlineHelpText>
        <label>Approx Annual Travel Spend Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Registration_No__c</fullName>
        <label>Business Registration No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>INTL</fullName>
                </value>
                <value>
                    <fullName>OTA B2B</fullName>
                </value>
                <value>
                    <fullName>OTA B2C</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>TMC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commissionable__c</fullName>
        <label>Commissionable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <label>Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_Code__c</fullName>
        <externalId>true</externalId>
        <label>Corporate Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Corporate_Discount__c</fullName>
        <label>Corporate Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Method_of_Booking__c</fullName>
        <label>Current Method of Booking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Travel Agent</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_SG_Sale__c</fullName>
        <label>Current SG Sale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Active and Updated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GM_Domestic__c</fullName>
        <label>GM Domestic</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOD__c</fullName>
        <label>HOD</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_TAAI_TAFI_IATO_No__c</fullName>
        <label>IATA/TAAI/TAFI/IATO No</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Account_Manager__c</fullName>
        <label>Key Account Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Status__c</fullName>
        <label>Legal Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>Limited Co.</fullName>
                </value>
                <value>
                    <fullName>Partnership Firm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DOM</fullName>
                </value>
                <value>
                    <fullName>INT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Login_Id__c</fullName>
        <label>Login Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode_of_Payment__c</fullName>
        <label>Mode of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Demand Draft</fullName>
                </value>
                <value>
                    <fullName>Electronic Fund Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Movement_Type__c</fullName>
        <label>Movement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular Group</fullName>
                </value>
                <value>
                    <fullName>Incentive Movement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Navitaire_Id__c</fullName>
        <externalId>true</externalId>
        <label>Navitaire Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>No_of_Months_Deal_Valid__c</fullName>
        <label>No of Months Deal Valid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Office_Locations__c</fullName>
        <label>Other Office Locations</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_No__c</fullName>
        <label>PAN No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Remarks__c</fullName>
        <label>Payment Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Products_Role__c</fullName>
        <label>Products/Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>API</fullName>
                </value>
                <value>
                    <fullName>API Corporate</fullName>
                </value>
                <value>
                    <fullName>CORT</fullName>
                </value>
                <value>
                    <fullName>HOL</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>LTC</fullName>
                </value>
                <value>
                    <fullName>STBF</fullName>
                </value>
                <value>
                    <fullName>TATA</fullName>
                </value>
                <value>
                    <fullName>TCPN</fullName>
                </value>
                <value>
                    <fullName>Web Travel Agent</fullName>
                </value>
                <value>
                    <fullName>APIC</fullName>
                </value>
                <value>
                    <fullName>GRP</fullName>
                </value>
                <value>
                    <fullName>WRAG</fullName>
                </value>
                <value>
                    <fullName>RAIL</fullName>
                </value>
                <value>
                    <fullName>CKHD</fullName>
                </value>
                <value>
                    <fullName>SPCP</fullName>
                </value>
                <value>
                    <fullName>TBF</fullName>
                </value>
                <value>
                    <fullName>API2</fullName>
                </value>
                <value>
                    <fullName>SVAL</fullName>
                </value>
                <value>
                    <fullName>GRPM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <label>Record Type Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Head__c</fullName>
        <label>Regional Head</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATE1__c</fullName>
        <label>STATE1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel1__c</fullName>
        <label>Sales Channel1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sectors_Frequently_Travelled__c</fullName>
        <label>Sectors Frequently Travelled</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agartala (IXA)</fullName>
                </value>
                <value>
                    <fullName>Ahmedabad (AMD)</fullName>
                </value>
                <value>
                    <fullName>Amritsar (ATQ)</fullName>
                </value>
                <value>
                    <fullName>Bagdogra (IXB)</fullName>
                </value>
                <value>
                    <fullName>Bangkok (BKK)</fullName>
                </value>
                <value>
                    <fullName>Belagavi (IXG)</fullName>
                </value>
                <value>
                    <fullName>Bengaluru (BLR)</fullName>
                </value>
                <value>
                    <fullName>Chandigarh (IXC)</fullName>
                </value>
                <value>
                    <fullName>Chennai (MAA)</fullName>
                </value>
                <value>
                    <fullName>Coimbatore (CJB)</fullName>
                </value>
                <value>
                    <fullName>Colombo (CMB)</fullName>
                </value>
                <value>
                    <fullName>Dehradun (DED)</fullName>
                </value>
                <value>
                    <fullName>Delhi (DEL)</fullName>
                </value>
                <value>
                    <fullName>Dharamshala (DHM)</fullName>
                </value>
                <value>
                    <fullName>Dubai (DXB)</fullName>
                </value>
                <value>
                    <fullName>Goa (GOI)</fullName>
                </value>
                <value>
                    <fullName>Guwahati (GAU)</fullName>
                </value>
                <value>
                    <fullName>Hyderabad (HYD)</fullName>
                </value>
                <value>
                    <fullName>Jabalpur (JLR)</fullName>
                </value>
                <value>
                    <fullName>Jaipur (JAI)</fullName>
                </value>
                <value>
                    <fullName>Jammu (IXJ)</fullName>
                </value>
                <value>
                    <fullName>Jodhpur (JDH)</fullName>
                </value>
                <value>
                    <fullName>Kabul (KBL)</fullName>
                </value>
                <value>
                    <fullName>Kochi (COK)</fullName>
                </value>
                <value>
                    <fullName>Kolkata (CCU)</fullName>
                </value>
                <value>
                    <fullName>Kozhikode (CCJ)</fullName>
                </value>
                <value>
                    <fullName>Madurai (IXM)</fullName>
                </value>
                <value>
                    <fullName>Male (MLE)</fullName>
                </value>
                <value>
                    <fullName>Mangalore (IXE)</fullName>
                </value>
                <value>
                    <fullName>Mumbai (BOM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>ANI</fullName>
                </value>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>ASM</fullName>
                </value>
                <value>
                    <fullName>BHR</fullName>
                </value>
                <value>
                    <fullName>CHT</fullName>
                </value>
                <value>
                    <fullName>DEL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>GJ</fullName>
                </value>
                <value>
                    <fullName>GOA</fullName>
                </value>
                <value>
                    <fullName>GUJ</fullName>
                </value>
                <value>
                    <fullName>HAR</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>HYD</fullName>
                </value>
                <value>
                    <fullName>J&amp;K</fullName>
                </value>
                <value>
                    <fullName>JH</fullName>
                </value>
                <value>
                    <fullName>JHR</fullName>
                </value>
                <value>
                    <fullName>KAR</fullName>
                </value>
                <value>
                    <fullName>KER</fullName>
                </value>
                <value>
                    <fullName>MAH</fullName>
                </value>
                <value>
                    <fullName>MEG</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MP</fullName>
                </value>
                <value>
                    <fullName>ORI</fullName>
                </value>
                <value>
                    <fullName>PUB</fullName>
                </value>
                <value>
                    <fullName>RAJ</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>TRP</fullName>
                </value>
                <value>
                    <fullName>UP</fullName>
                </value>
                <value>
                    <fullName>UTRL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Station_Nearest_Airport__c</fullName>
        <label>Station (Nearest Airport)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agartala (IXA)</fullName>
                </value>
                <value>
                    <fullName>Ahmedabad (AMD)</fullName>
                </value>
                <value>
                    <fullName>Aizawl (AJL)</fullName>
                </value>
                <value>
                    <fullName>Amritsar (ATQ)</fullName>
                </value>
                <value>
                    <fullName>Bagdogra (IXB)</fullName>
                </value>
                <value>
                    <fullName>Bangkok (BKK)</fullName>
                </value>
                <value>
                    <fullName>Belagavi (IXG)</fullName>
                </value>
                <value>
                    <fullName>Bengaluru (BLR)</fullName>
                </value>
                <value>
                    <fullName>Chandigarh (IXC)</fullName>
                </value>
                <value>
                    <fullName>Chennai (MAA)</fullName>
                </value>
                <value>
                    <fullName>Coimbatore (CJB)</fullName>
                </value>
                <value>
                    <fullName>Colombo (CMB)</fullName>
                </value>
                <value>
                    <fullName>Dehradun (DED)</fullName>
                </value>
                <value>
                    <fullName>Delhi (DEL)</fullName>
                </value>
                <value>
                    <fullName>Dharamshala (DHM)</fullName>
                </value>
                <value>
                    <fullName>Dubai (DXB)</fullName>
                </value>
                <value>
                    <fullName>Goa (GOI)</fullName>
                </value>
                <value>
                    <fullName>Gorakhpur (GOP)</fullName>
                </value>
                <value>
                    <fullName>Guwahati (GAU)</fullName>
                </value>
                <value>
                    <fullName>Hyderabad (HYD)</fullName>
                </value>
                <value>
                    <fullName>Jabalpur (JLR)</fullName>
                </value>
                <value>
                    <fullName>Jaipur (JAI)</fullName>
                </value>
                <value>
                    <fullName>Jammu (IXJ)</fullName>
                </value>
                <value>
                    <fullName>Jodhpur (JDH)</fullName>
                </value>
                <value>
                    <fullName>Kabul (KBL)</fullName>
                </value>
                <value>
                    <fullName>Kochi (COK)</fullName>
                </value>
                <value>
                    <fullName>Kolkata (CCU)</fullName>
                </value>
                <value>
                    <fullName>Kozhikode (CCJ)</fullName>
                </value>
                <value>
                    <fullName>Madurai (IXM)</fullName>
                </value>
                <value>
                    <fullName>Male (MLE)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Station__c</fullName>
        <label>Station</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subsidiaries_if_any__c</fullName>
        <label>Subsidiaries (if any)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Per_Month__c</fullName>
        <label>Target Per Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Agency__c</fullName>
        <label>Travel Agency</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <formula>$UserRole.DeveloperName</formula>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEB_Discount__c</fullName>
        <label>WEB Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Web_Code__c</fullName>
        <label>Web Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyAccounts</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>PC_EMAIL</columns>
        <columns>PC_PHONE4</columns>
        <columns>Work_Phone_Secondary_Phone__pc</columns>
        <columns>PC_PHONE5</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>AKBAR TRAVELS ONLINE.COM-BOMAC46600</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
        </filters>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PC_EMAIL</columns>
        <columns>PC_PHONE4</columns>
        <columns>PC_PHONE5</columns>
        <columns>Work_Phone_Secondary_Phone__pc</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cargo_Air_to_Air</fullName>
        <active>true</active>
        <description>Record Type for Cargo Air to Air</description>
        <label>Cargo Air to Air</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cargo_Door_to_Door</fullName>
        <active>true</active>
        <description>Record Type for Cargo Door to Door</description>
        <label>Cargo Door to Door</label>
    </recordTypes>
    <recordTypes>
        <fullName>Corporate</fullName>
        <active>true</active>
        <description>For Corporate Accounts</description>
        <label>Corporate</label>
    </recordTypes>
    <recordTypes>
        <fullName>Travel_Agency</fullName>
        <active>true</active>
        <description>For Travel Agenies</description>
        <label>Travel Agency</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cannot_change_Corporate_Travel_Agn_owner</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
        RecordType.DeveloperName == &apos;Corporate&apos;,
        RecordType.DeveloperName == &apos;Travel_Agency&apos;
    ),
    CONTAINS(PRIORVALUE( User_Role__c ), &apos;Sales_Executive&apos;),
    ISCHANGED( OwnerId )
)</errorConditionFormula>
        <errorMessage>Cannot change the owner. Please contact Central Sales Coordinator,  Managers or GM</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_delete_Spicejet_Account</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Id == &apos;0013600000PbAhp&apos;,
    NOT(ISCHANGED( LastModifiedDate ))
)</errorConditionFormula>
        <errorMessage>Cannot edit/delete this record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Home_Phone_Flag_mandatory</fullName>
        <active>true</active>
        <description>Home Phone type is mandatory if Home Phone is not blank</description>
        <errorConditionFormula>AND( 
IsPersonAccount,
RecordType.DeveloperName == &apos;PersonAccount&apos;,
NOT(ISBLANK( PersonHomePhone )),
ISBLANK( TEXT(Home_Phone_Type__pc) )
)</errorConditionFormula>
        <errorDisplayField>Home_Phone_Type__pc</errorDisplayField>
        <errorMessage>Please select Home Phone Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Phone_Flag_mandatory</fullName>
        <active>true</active>
        <description>Other Phone type is mandatory if Other Phone is not blank</description>
        <errorConditionFormula>AND( 
IsPersonAccount,
RecordType.DeveloperName == &apos;PersonAccount&apos;,
NOT(ISBLANK( PersonOtherPhone  )),
ISBLANK( TEXT(Other_Phone_Type__pc) )
)</errorConditionFormula>
        <errorDisplayField>Other_Phone_Type__pc</errorDisplayField>
        <errorMessage>Please select Other Phone Type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PAN_No_is_mandatory</fullName>
        <active>true</active>
        <description>PAN No. is mandatory</description>
        <errorConditionFormula>AND(ISPICKVAL(Location__c, &apos;DOM&apos;),  ISBLANK(PAN_No__c), RecordType.DeveloperName == &apos;Travel_Agency&apos;)</errorConditionFormula>
        <errorDisplayField>PAN_No__c</errorDisplayField>
        <errorMessage>Please enter the PAN No.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Payment_Amount_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(TEXT(Mode_of_Payment__c))), ISBLANK(Payment_Amount__c),  RecordType.DeveloperName == &apos;Travel_Agency&apos;)</errorConditionFormula>
        <errorDisplayField>Payment_Amount__c</errorDisplayField>
        <errorMessage>Please enter the Payment Amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Region_is_required_for_Travel_Agency</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
    RecordType.DeveloperName == &apos;Travel_Agency&apos;,
    ISBLANK(TEXT( Region__c ))
)</errorConditionFormula>
        <errorDisplayField>Region__c</errorDisplayField>
        <errorMessage>Please enter the Region</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Work_Phone_Flag_mandatory</fullName>
        <active>true</active>
        <description>Work Phone type is mandatory if Work Phone is not blank</description>
        <errorConditionFormula>AND( 
IsPersonAccount,
RecordType.DeveloperName == &apos;PersonAccount&apos;,
NOT(ISBLANK( Work_Phone_Secondary_Phone__pc )),
ISBLANK( TEXT(Work_Phone_Type__pc) )
)</errorConditionFormula>
        <errorDisplayField>Work_Phone_Type__pc</errorDisplayField>
        <errorMessage>Please select Work Phone Type</errorMessage>
    </validationRules>
</CustomObject>